--- a/Page-1.html
+++ b/Page-1.html
@@ -296,7 +296,7 @@
                         <span class="u-text-grey-15">&nbsp;Contact form </span>
                       </h2>
                       <div class="email u-expanded-width-sm u-expanded-width-xs u-form u-form-1">
-                        <form action="scripts/form-08df.php" method="POST" class="u-clearfix u-form-spacing-10 u-form-vertical u-inner-form" style="padding: 5px;" source="customphp" name="form-2">
+                        <form action="https://api.escode.sk/form-08df.php" method="POST" class="u-clearfix u-form-spacing-10 u-form-vertical u-inner-form" style="padding: 5px;" source="customphp" name="form-2">
                           <div class="u-form-group u-form-name">
                             <label for="name-da97" class="u-form-control-hidden u-label">Name</label>
                             <input type="text" placeholder="Enter your Name" id="name-da97" name="name" class="u-border-no-bottom u-border-no-left u-border-no-right u-border-no-top u-grey-80 u-input u-input-rectangle" required="">
